--- a/src/scss/widgets/_error_pages.scss
+++ b/src/scss/widgets/_error_pages.scss
@@ -10,6 +10,12 @@
 
   // Styling
   color: $o-critical;
+
+  .icon {
+    // Fix icon alignment
+    position: relative;
+    top: -0.1em;
+  }
 }
 
 .error-code {
